erDiagram
    ADMIN ||--o{ REPORT_COLLECTION : "creates"
    ADMIN ||--o{ REPORT : "uploads"
    ADMIN ||--o{ ALLOWED_DOMAIN : "manages"
%%    ADMIN ||--o{ WEBSOCKET_AUDIT : "initiates"
    ADMIN ||--o{ NOTIFICATION : "receives"

    REPORT_COLLECTION ||--o{ REPORT : "contains"
    REPORT_COLLECTION ||--o{ ACCESS_REQUEST : "receives requests"
    REPORT_COLLECTION ||--o{ ACCESS_TOKEN : "grants access to"

    ACCESS_REQUEST ||--|| ACCESS_TOKEN : "generates"
    ACCESS_REQUEST ||--o{ NOTIFICATION : "triggers"

    ADMIN {
        UUID id PK
        VARCHAR(255) username UK
        VARCHAR(255) email UK
        UUID keycloak_user_id UK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

    REPORT_COLLECTION {
        UUID id PK
        VARCHAR(255) name UK
        TEXT description
        BOOLEAN is_locked
        BOOLEAN is_published
        UUID admin_id FK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

    REPORT {
        UUID id PK
        VARCHAR(255) name
        VARCHAR(255) file_path
        BIGINT size_bytes
        ENUM type "CSV/XLS/XLSX/XLSM/XLSB/XLTX"
        UUID report_collection_id FK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

    ACCESS_REQUEST {
        UUID id PK
        VARCHAR(255) name
        VARCHAR(255) email
        TEXT message
        ENUM status "PENDING/ACCEPTED/REJECTED"
        UUID report_collection_id FK
        TEXT admin_comment
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

    ACCESS_TOKEN {
        UUID id PK
        VARCHAR(6) token_value UK
        UUID report_collection_id FK
        UUID access_request_id FK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ expires_at
        BOOLEAN is_active
        BOOLEAN is_revoked
        TIMESTAMPTZ last_modified_date
    }

    ALLOWED_DOMAIN {
        UUID id PK
        VARCHAR(255) domain_name
        UUID admin_id FK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

    NOTIFICATION {
        UUID id PK
        TEXT message
        BOOLEAN is_read
        UUID admin_id FK
        UUID access_request_id FK
        TIMESTAMPTZ created_date
        TIMESTAMPTZ last_modified_date
    }

%%    WEBSOCKET_AUDIT {
%%        UUID id PK
%%        UUID admin_id FK
%%        TIMESTAMPTZ connection_time
%%        TIMESTAMPTZ disconnect_time
%%    }
